<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="pref_feedview_order">記事の表示順</string>
    <string name="pref_subs_screen_title">フィードのリスト</string>
    <string name="pref_subs_icon">アイコンを表示</string>
    <string name="pref_feedview_button_pin_summary">表示しない場合もMENUから、または[p]キーで実行できます</string>
    <string name="pref_feedview_button_share_summary">表示しない場合もMENUから実行できます</string>
    <string name="pref_feedview_button_open_summary">表示しない場合もMENUから、または[v]キーで実行できます</string>
    <string name="pref_feedview_screen_summary">記事を表示する画面の設定</string>
    <string name="pref_feedview_button_pin_title">Pin ボタンを表示</string>
    <string name="pref_feedview_button_share_title">Share ボタンを表示</string>
    <string name="pref_feedview_button_open_title">Open ボタンを表示</string>
    <string name="pref_feedview_button_category_title">表示するボタン</string>
    <string name="pref_feedview_screen_title">フィード閲覧画面</string>
    <string name="app_name">LDRoid</string>
    <string name="prev_button">&lt;&lt;Prev</string>
    <string name="prev_sub_button">&lt;&lt;前のFeedへ</string>
    <string name="next_button">Next&gt;&gt;</string>
    <string name="next_sub_button">次のFeedへ&gt;&gt;</string>
    <string name="open_button">Open</string>
    <string name="pin_button">Pin</string>
    <string name="share_button">Share</string>
    <string name="menu_reload">リロード</string>
    <string name="pref_account_title">アカウント設定</string>
    <string name="pref_account_summary">livedoor Readerのアカウント設定</string>
    <string name="pref_login_id_title">livedoor ID</string>
    <string name="pref_login_id_summary">livedoor IDを入力して下さい</string>
    <string name="pref_password_title">パスワード</string>
    <string name="pref_password_summary">パスワードを入力して下さい</string>
	<string name="menu_setting">設定</string>
	<string name="menu_fetch_all">すべて取得</string>
	
	<string name="dlg_cancel">キャンセル</string>
	<string name="dlg_fetch_all_title">取得しています...</string>
	
	<string name="toast_touched">既読にしました</string>
	<string name="toast_last_sub">最後のFeedです</string>

	<string name="feed_view_template"><![CDATA[<html>
	<head>
	<style type="text/css">
	h1 { font-size:120%; margin-top:.25em; margin-bottom:.25em; }
	.titlebar { margin-bottom:1em; }
	.metabar { font-size:80%; margin-top:.25em; margin-bottom:.25em; }
	.articlebody { line-height:150%; font-size:90%; }
	body { margin:.25em; }
	img:not([width]) { max-width:100%; max-height:100%; }
	</style>
	</head>
	<body id="body">
	  <div class="article" id="article{id}">
	    <div class="articlecontent">
	       <div class="pinnedarticle" id="{id}">
	         <div class="titlebar">
	           <!--
	           <div class="buttonbar">
	             <img src="pin_pushed" class="pin" width="32" height="39" id="pin{id}" onClick="onPin('{id}')"/>
	           </div>
	           -->
	           <h1>{title}</h1>
	           <div class="metabar">
	              <a href="{link}">元記事</a> | {time} {author}
	           </div>
	         </div>
	         <div class="articlebody">
	            {body}
	         </div>
	       </div>
	    </div>
	  </div>
	</body>
	</html>]]>
	</string>
</resources>
