<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
	xmlns:android="http://schemas.android.com/apk/res/android">
	<PreferenceScreen
		android:title="@string/pref_account_title"
		android:summary="@string/pref_account_summary">
		<EditTextPreference
			android:key="login_id"
			android:title="@string/pref_login_id_title"
			android:summary="@string/pref_login_id_summary"
			android:inputType="text|textEmailAddress"
			android:defaultValue="" />
		<EditTextPreference
			android:key="password"
			android:title="@string/pref_password_title"
			android:summary="@string/pref_password_summary"
			android:password="true"
			android:inputType="text"
			android:defaultValue="" />
	</PreferenceScreen>

	<PreferenceScreen
		android:title="@string/pref_feedview_screen_title"
		android:summary="@string/pref_feedview_screen_summary">
		<PreferenceCategory
			android:title="@string/pref_feedview_button_category_title">
			<CheckBoxPreference
				android:title="@string/pref_feedview_button_open_title"
				android:key="feedview_button_open"
				android:defaultValue="true"
				android:summary="@string/pref_feedview_button_open_summary" />
			<CheckBoxPreference
				android:key="feedview_button_share"
				android:title="@string/pref_feedview_button_share_title"
				android:defaultValue="true"
				android:summary="@string/pref_feedview_button_share_summary" />
			<CheckBoxPreference
				android:key="feedview_button_pin"
				android:title="@string/pref_feedview_button_pin_title"
				android:defaultValue="true"
				android:summary="@string/pref_feedview_button_pin_summary" />
		</PreferenceCategory>
	</PreferenceScreen>
</PreferenceScreen>
 